--- a/app/views/exhibitions/new_step_one.html.erb
+++ b/app/views/exhibitions/new_step_one.html.erb
@@ -28,8 +28,12 @@
             </label>
           <% end %>
         </div>
-        <div class="padded">
-          <input type="submit" class="btn btn-primary-bis btn-lg btn-block" value="Next step">
+        <div class="row">
+          <div class="col-xs-12 col-sm-4 col-sm-offset-8">
+            <div class="padded">
+              <input type="submit" class="btn btn-primary-bis btn-lg btn-block" value="Next step">
+            </div>
+          </div>
         </div>
       </form>
     </div>
