artist show + swipebox

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -6,10 +6,10 @@
 $base-font: "Open Sans", "Helvetica", "sans-serif";
 $header-font: "Raleway", "Helvetica", "sans-serif";
 
-// Local fonts (uncomment following lines)
+// // Local fonts (uncomment following lines)
 // @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
+//   font-family: "Graphik";
+//   src: font-url('FontFile.otf');
 //   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
 //        font-url('FontFile.woff') format('woff'),
 //        font-url('FontFile.ttf') format('truetype')
