--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div id="footer" class="padded">
   <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-3">
+    <div class="footer-row">
+      <div class="col-xs-12 col-sm-6 col-md-3 footer-info-left">
         <p class="section">
           <strong>
             Informations
@@ -9,12 +9,12 @@
         </p>
         <ul class="list-unstyled">
           <li><a href="">FAQ</a></li>
-          <li><a href="#">How it work ?</a></li>
+          <li><a href="#">How it works ?</a></li>
           <li><a href="#">CGV</a></li>
           <li><a href="#">Legal Notice</a></li>
         </ul>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-3 footer-info-left">
         <p class="section">
           <strong>
             About us
@@ -26,7 +26,7 @@
           <li><a href="#">Join us</a></li>
         </ul>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-3 footer-info-right">
         <p class="section">
           <strong>
             Last blog posts
@@ -35,11 +35,11 @@
         <ul class="list-unstyled">
           <li><a href="#">Top 5 of the best offices worldwide</a></li>
           <li><a href="#">Art and productivity</a></li>
-          <li><a href="#">"Office need to be lighten up by Art!"</a></li>
-          <li><a href="#">Tax exemption and Art: How does it works ?</a></li>
+          <li><a href="#">"Offices need to be lighten up by Art!"</a></li>
+          <li><a href="#">Tax exemption and Art: How does it work ?</a></li>
         </ul>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-3 footer-info-right">
         <p class="section">
           <strong>
             Contact us
@@ -47,7 +47,7 @@
         </p>
         <address>
           <i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:#">contact@seeedr.com</a><br>
-          <i class="fa fa-phone-square" aria-hidden="true"></i>01 76 97 09 98<br>
+          <i class="fa fa-phone-square" aria-hidden="true"></i>+33 (0)1 76 97 09 98<br>
         </address>
         <address>
           <strong>Seeedr</strong><br>
