--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,35 +18,37 @@
 <!-- key step-->
 
 <div class="wrapper padded-mini bg-grey">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <h2 class="padded-mini text-center" style="font-family: 'Basic', sans-serif;">An easy process</h2>
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <div class="key-step">
-          <div><i class="fa fa-paint-brush" aria-hidden="true"></i></div>
-          <h3>1-Create your exhibition</h3>
-          <p class="key-content">Start creating your exhibition request by following the matching-driven form. When you are done, submit it: Your exhibition request is online. </p>
+      <div class="smaller-box">
+        <h2 class="padded-mini text-center" style="font-family: 'Basic', sans-serif;">An easy process</h2>
+        <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+          <div class="key-step">
+            <div><i class="fa fa-paint-brush" aria-hidden="true"></i></div>
+            <h3>1-Create your exhibition</h3>
+            <p class="key-content">Start creating your exhibition request by following the matching-driven form. When you are done, submit it: Your exhibition request is online. </p>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <div class="key-step">
-          <div><i class="fa fa-users" aria-hidden="true"></i></div>
-          <h3>2-Artists apply to your exhibition</h3>
-          <p class="key-content">Our community of hundreds of artists can now see your exhibition request and apply to bring their art in your offices. </p>
+        <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+          <div class="key-step">
+            <div><i class="fa fa-users" aria-hidden="true"></i></div>
+            <h3>2-Artists apply to your exhibition</h3>
+            <p class="key-content">Our community of hundreds of artists can now see your exhibition request and apply to bring their art in your offices. </p>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <div class="key-step">
-          <div><i class="fa fa-heart" aria-hidden="true"></i></div>
-          <h3>3-Pick your favorite Artist</h3>
-          <p class="key-content">Finalize the process by picking your favorite artist! Your work stop here, Seeedr takes care of the rest.</p>
+        <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+          <div class="key-step">
+            <div><i class="fa fa-heart" aria-hidden="true"></i></div>
+            <h3>3-Pick your favorite Artist</h3>
+            <p class="key-content">Finalize the process by picking your favorite artist! Your work stop here, Seeedr takes care of the rest.</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-      <div class="text-center">
-        <%= link_to "read more", new_exhibition_path, class: "btn btn-primary btn-lg read" %>
-      </div>
+  <div class="text-center">
+    <%= link_to "read more", new_exhibition_path, class: "btn btn-primary btn-lg read" %>
+  </div>
 </div>
 
 <!-- Last artwork-->
@@ -162,7 +164,7 @@
 
 <!-- testimonial homepage -->
 
-<div class="wrapper padded bg-grey">
+<div class="wrapper padded-bottom bg-grey">
   <div class="container">
     <div class="row">
       <h2 class="padded-mini" style="font-family: 'Basic', sans-serif;">Discover how le Wagon improved his workplace with us</h2>
@@ -187,10 +189,10 @@
 
 <!-- reassurance -->
 
-<div class="wrapper padded-mini">
+<div class="wrapper padded-mini margin-bottom">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini" style="font-family: 'Basic', sans-serif;">Four reasons to work with us</h2>
+      <h2 class="padded-total text-center" style="font-family: 'Basic', sans-serif;">Four reasons to work with us</h2>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
         <div class="key-step">
           <i class="fa fa-handshake-o" aria-hidden="true"></i>
@@ -215,10 +217,6 @@
           <p>Unleash creativity of your teams and partners</p>
         </div>
       </div>
-    </div>
-  <div class="row padded-mini">
-      <hr class="separator">
-      <h3 class="text-center padded-mini" style="font-family: 'Basic', sans-serif;">They Work With Us</h3>
     </div>
   </div>
 </div>
