--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,9 @@
 <div id="footer" class="padded">
-  <div class="container">
-    <div class="footer-row">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="smaller-box">
+
+      </div>
       <div class="col-xs-12 col-sm-6 col-md-3 footer-info-left">
         <p class="section">
           <strong>
@@ -56,14 +59,14 @@
         </address>
       </div>
     </div>
-    <div class="row text-center">
+    <div class="row">
       <ul class="list-inline">
         <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
         <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
         <li><a href=""><i class="fa fa-google" aria-hidden="true"></i></a></li>
       </ul>
     </div>
-    <div class="row text-center">
+    <div class="row">
       <p class="copyright">© Seeedr - 2017</p>
     </div>
   </div>
