--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -66,9 +66,9 @@ hr.separator.show-exhibition {
 
 // Artist category display hack
 span.artist-category {
-  background: $black;
+  background: $gray;
   color: white;
-  padding: 3px 7px;
+  padding: 4px 8px;
   border-radius: 20px;
   font-size: .8em;
 }
