--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,6 @@
 .btn-new-small {
   display: inline-block;
-  border: 2px solid $brand-color;
+  border: 3px solid $brand-color;
   font-weight: 600;
   line-height: 1.8rem;
   transition: all .2s ease;
@@ -9,9 +9,12 @@
 }
 
 .btn-new-small:hover {
-  box-shadow: 0 0 0 2px $brand-color;
-  border: 2px solid transparent;
+  border-color: $yellow;
   text-decoration: none;
+}
+
+.btn-new-small:focus {
+    outline: 0;
 }
 
 .btn-new-small p {
@@ -27,10 +30,19 @@
 
 .btn-new-black {
   display: inline-block;
-  border: 2px solid black;
+  border: 3px solid $gray;
   font-weight: 600;
   line-height: 1.8rem;
-  transition: all .2s ease;
+  transition: all .3s ease;
   background-color: transparent;
   padding: 14px;
+  margin-right: 15px;
+}
+
+.btn-new-black:hover {
+  border-color: $brand-color;
+}
+
+.btn-new-black:focus {
+  outline: 0;
 }
