--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -125,12 +125,12 @@
 
 .dashboard-card {
   color: white;
-  filter: brightness(0.8);
   transition: .3s all;
 }
 
 img.dashboard-card {
-  border: 4px solid black;
+    border: 5px solid white;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.11);
 }
 
 .dashboard-card:hover {
