--- a/app/views/bids/update.js.erb
+++ b/app/views/bids/update.js.erb
@@ -1,21 +1,21 @@
 // 1.status de la bid change au click
-$('#status-book-<%= @bid.id %>').html("<p><i class='fa fa-thumb-tack' aria-hidden='true'></i> <%= @bid.status %></p>");
+$('#status-book-<%= @bid.id %>').html("<p class='bid-status'><%= @bid.status.capitalize %></p>");
 // 2.bouton de la bid change au click
 $('#button-book-<%= @bid.id %>').html("<%= j render 'bids/button_book', bid: @bid %>");
 // 3. change statut de tous les autres bids en pending au click
-$('.status-toggle:not(#status-book-<%= @bid.id %>)').html("<p><i class='fa fa-thumb-tack' aria-hidden='true'></i> pending</p>");
+$('.status-toggle:not(#status-book-<%= @bid.id %>)').html("<p class='bid-status'>Pending</p>");
 
 //  --------- ok ------------
 
 // 4. doit hider les boutons books des autres classes
 if ($('.toggle-book').val() === 'Unbook') {
-  $('.toggle-button:not(#button-book-<%= @bid.id %>)').addClass('hidden');
+  $('#exhibition-<%= @bid.exhibition.id %> .toggle-button:not(#button-book-<%= @bid.id %>)').addClass('hidden');
   // show payment button
-  $('#payment_button').removeClass('hidden');
-  $('#payment_button').html("<%= j render 'bids/payment_button', bid: @bid %>");
+  $('#exhibition-<%= @bid.exhibition.id %> #payment_button').removeClass('hidden');
+  $('#exhibition-<%= @bid.exhibition.id %> #payment_button').html("<%= j render 'bids/payment_button', bid: @bid %>");
 }
 else if ($('.toggle-book').val() === 'Book this artist') {
-  $('.toggle-button:not(#button-book-<%= @bid.id %>)').toggleClass('hidden');
+  $('#exhibition-<%= @bid.exhibition.id %> .toggle-button:not(#button-book-<%= @bid.id %>)').toggleClass('hidden');
   // hide payment button
-  $('#payment_button').toggleClass('hidden');
+  $('#exhibition-<%= @bid.exhibition.id %> #payment_button').toggleClass('hidden');
 };
