--- a/app/views/dashboard/_list_company_exhibitions.erb
+++ b/app/views/dashboard/_list_company_exhibitions.erb
@@ -1,73 +1,90 @@
 <div class="list-exhibitions">
   <% @exhibition.each do |exhibition| %>
-    <div class="exhibition">
+    <div id="exhibition-<%= exhibition.id %>" class="exhibition">
       <div class="exhibition-header">
         <div class="exhibition-title">
           <div class="row">
-            <div class="col-xs-12">
-              <h3><%= exhibition.title.capitalize %>
-                <ul class="list-inline product-controls hidden-sm hidden-xs pull-right">
-                  <li>
-                    <%= link_to edit_exhibition_path(exhibition) do %>
-                      <i class="fa fa-paint-brush" aria-hidden="true"></i>
-                    <% end %>
-                  </li>
-                  <li>
-                    <%= link_to exhibition_path(exhibition),
-                        method: :delete,
-                        data: {confirm: "Are you sure?"},
-                        class: 'pull-right' do %>
-                      <i class="fa fa-trash" aria-hidden="true"></i>
-                    <% end %>
-                  </li>
-                </ul>
-              </h3>
+            <div class="col-xs-6">
+              <h3><%= exhibition.title.capitalize %></h3>
+            </div>
+            <div class="bottom-align-text col-xs-6">
+              <ul class="list-inline product-controls hidden-sm hidden-xs pull-right" style="margin: 15px 15px 0 0;">
+                <li>
+                  <%= link_to edit_exhibition_path(exhibition) do %>
+                    <i class="fa fa-paint-brush" aria-hidden="true"></i>
+                  <% end %>
+                </li>
+                <!-- Button trigger modal -->
+                <li>
+                  <i class="fa fa-trash" aria-hidden="true" data-toggle="modal" data-target="#myModal"></i>
+                </li>
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-body">
+                        <p>Do you realy want to delete this exhibition ?</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <%= link_to exhibition_path(exhibition),
+                            method: :delete do %>
+                            <button type="button" class="btn btn-danger">Delete exhibition</button>
+                        <% end %>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </ul>
             </div>
           </div>
         </div>
-        <div class="product">
-          <% exhibition.photos.first.nil? ? (exhibition_picture = 'https://unsplash.it/200x200') : (exhibition_picture = exhibition.photos.first.path) %>
-          <%= cl_image_tag exhibition_picture, width: 200, height: 200, crop: :fill, class: "product-image dashboard-card hidden-xs"%>
-          <div class="product-details bolder-hover">
-            <div class="row">
-              <div class="col-xs-12">
-                <p><i class="fa fa-heart" aria-hidden="true" id="artist-answers"></i>
-                <%= exhibition.bids.count %>
-                 <%= pluralize_without_count(exhibition.bids.count, 'artist') %> candidated</p>
-              </div>
-              <div class="col-xs-12">
-                <p><i class="fa fa-calendar" aria-hidden="true"></i> <%= exhibition.start_date %></p>
-              </div>
-              <div class="col-xs-12">
-                <p><i class="fa fa-heartbeat" aria-hidden="true"></i> <%= exhibition.duration %> months</p>
-              </div>
-              <div class="col-xs-12">
-                <p><i class="fa fa-usd" aria-hidden="true"></i> <%= humanized_money_with_symbol(exhibition.price)%></p>
-              </div>
-              <div class="col-xs-12">
-                <p><i class="fa fa-map-marker" aria-hidden="true"></i>  <%= exhibition.address.capitalize %></p>
+        <div class="exhibition-content">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+              <% exhibition.photos.first.nil? ? (exhibition_picture = 'https://unsplash.it/200x200') : (exhibition_picture = exhibition.photos.first.path) %>
+              <%= cl_image_tag exhibition_picture, width: 200, height: 200, crop: :fill, class: "product-image dashboard-card hidden-xs"%>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-2">
+              <div class="row">
+                <div class="col-xs-12">
+                  <p>
+                    <i class="fa fa-heart" aria-hidden="true" id="artist-answers"></i> <%= exhibition.bids.count %> <%= pluralize_without_count(exhibition.bids.count, 'artist') %> applied
+                  </p>
+                </div>
+                <div class="col-xs-12">
+                  <p>
+                    <i class="fa fa-calendar" aria-hidden="true"></i> <%= exhibition.start_date %></p>
+                </div>
+                <div class="col-xs-12">
+                  <p>
+                    <i class="fa fa-heartbeat" aria-hidden="true"></i> <%= exhibition.duration %> months
+                  </p>
+                </div>
+                <div class="col-xs-12">
+                  <p>
+                    <i class="fa fa-usd" aria-hidden="true" style="margin-left: 4px; margin-right: 8px;"></i> <%= humanized_money(exhibition.price)%>
+                  </p>
+                </div>
+                <div class="col-xs-12">
+                  <p>
+                    <i class="fa fa-map-marker" aria-hidden="true" style="margin-left: 4px; margin-right: 8px;"></i> <%= exhibition.address.capitalize %>
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-
-          <div class="product-description">
-          <br>
-            <div class="row">
-              <div class="col-xs-12">
-                <% if exhibition.description %>
-                  <p>"<%= truncate(exhibition.description, 200) %>"</p>
+            <div class="col-xs-12 col-sm-6 col-md-5">
+              <% if exhibition.description %>
+                <p style="text-align: justify;" >"<%= truncate(exhibition.description, 300) %>"</p>
+              <% end %>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-2">
+              <div id="payment_button" class="pull-right" style="margin-top: 130px;">
+                <% exhibition.bids.each do |bid| %>
+                  <%= render "bids/payment_button", bid: bid %>
                 <% end %>
               </div>
             </div>
-          </div>
-          <br>
-          <div class="dashboard-cta">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-          </div>
-          <div id="payment_button", class= "test" >
-            <% exhibition.bids.each do |bid| %>
-              <%= render "bids/payment_button", bid: bid %>
-            <% end %>
           </div>
         </div>
       </div>
@@ -86,51 +103,45 @@
                         <%= cl_image_tag user_picture, width: 100, height: 100, crop: :fill, class: 'avatar-medium' %>
                       <% end %>
                       <p class="name"><%= bid.user.first_name %> <%= bid.user.last_name %></p>
-                      <hr>
-                      <!-- artist description -->
-                      <div class="product-details">
-                        <% if bid.user.description %>
-                          <p class="description"><%= truncate(bid.user.description, 150) %></p>
-                        <% end %>
-                      </div>
-                      <hr style="margin-bottom: 15px">
+                      <hr><br>
                       <!-- Artist specialties -->
                       <div class="product-details bid-details">
-                        <p><i class="fa fa-tags" aria-hidden="true">
-                          <% bid.user.categories.order("name ASC").uniq.each do |category| %>
-                              <%= category.name.capitalize %>
+                        <p>
+                          <% bid.user.categories.order("name ASC").uniq.first(2).each do |category| %>
+                            <span class="artist-category"><%= category.name.capitalize %></span>
                           <% end %>
-                        </i></p>
-                        <!-- bid price offer -->
-                        <p><i class="fa fa-usd" aria-hidden="true"></i> <%= humanized_money_with_symbol(bid.price)%></p>
+                        </p>
                         <!-- bid status -->
                         <div class="status-toggle" id="status-book-<%= bid.id %>">
-                          <p><i class="fa fa-thumb-tack" aria-hidden="true"></i> <%= bid.status %></p>
+                          <p class="bid-status"><%= bid.status.capitalize %></p>
                         </div>
                       </div>
                     </div>
                   </div>
                   <!-- start artist bid pics -->
-                  <div class="card-bid-pics">
-                    <div class="col-xs-12 col-md-7">
+                    <div class="col-xs-12 col-md-8">
                       <div class="details">
                         <div class="artworks">
-                          <% bid.user.artworks.last(8).each do |artwork| %>
+                          <% bid.user.artworks.last(4).each do |artwork| %>
                             <%= cl_image_tag artwork_picture(artwork), width: 150, height: 150, crop: :fill, class: "dashboard-card" %>
                           <% end %>
-                          <div class="see-gallery pull-right">
-                            <%= link_to artist_users_path(bid.user.id) do %>
-                              <a class="see-gallery">See more</a>
-                            <% end %>
-                          </div>
                         </div>
                       </div>
                     </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-3"></div>
+                <div class="col-xs-6">
+                  <p class="user-desc">
+                    <%= truncate(bid.user.description, 342) %>
+                  </p>
+                </div>
+                <div class="col-xs-2">
+                  <!-- CTA : book / payment -->
+                  <% accepted_bid =  exhibition.bids.where(status: "accepted").first %>
+                  <div class="bid-cta toggle-button pull-right <%= 'hidden' if accepted_bid && accepted_bid != bid %>", id= "button-book-<%= bid.id %>" >
+                    <%= render "bids/button_book", bid: bid %>
                   </div>
-                <!-- CTA : book / payment -->
-                <% accepted_bid =  exhibition.bids.where(status: "accepted").first %>
-                <div class="bid-cta toggle-button pull-right <%= 'hidden' if accepted_bid && accepted_bid != bid %>", id= "button-book-<%= bid.id %>" >
-                  <%= render "bids/button_book", bid: bid %>
                 </div>
               </div>
             </div>
@@ -148,7 +159,7 @@
         </div>
       <% end %>
     </div>
-  </div>
+    </div>
   <% end %>
 </div>
 
