--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,9 @@
         <h2 class="padded-mini text-center" style="font-family: 'Basic', sans-serif;">An easy process</h2>
         <div class="col-xs-12 col-sm-6 col-md-4 text-center">
           <div class="key-step">
-            <div><i class="fa fa-paint-brush" aria-hidden="true"></i></div>
+            <div>
+              <%= image_tag "create.png" %>
+            </div>
             <h3>1-Create your exhibition</h3>
             <p class="key-content">Start creating your exhibition request by following the matching-driven form. When you are done, submit it: Your exhibition request is online. </p>
           </div>
@@ -38,7 +40,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 text-center">
           <div class="key-step">
-            <div><i class="fa fa-heart" aria-hidden="true"></i></div>
+            <div><%= image_tag "heart.png" %></div>
             <h3>3-Pick your favorite Artist</h3>
             <p class="key-content">Finalize the process by picking your favorite artist! Your work stop here, Seeedr takes care of the rest.</p>
           </div>
