--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,16 +24,14 @@
         <h2 class="padded-mini text-center" style="font-family: 'Basic', sans-serif;">An easy process</h2>
         <div class="col-xs-12 col-sm-6 col-md-4 text-center">
           <div class="key-step">
-            <div>
-              <%= image_tag "create.png" %>
-            </div>
+            <div><%= image_tag "create.png" %></div>
             <h3>1-Create your exhibition</h3>
             <p class="key-content">Start creating your exhibition request by following the matching-driven form. When you are done, submit it: Your exhibition request is online. </p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 text-center">
           <div class="key-step">
-            <div><i class="fa fa-users" aria-hidden="true"></i></div>
+            <div><%= image_tag "artist.png" %></div>
             <h3>2-Artists apply to your exhibition</h3>
             <p class="key-content">Our community of hundreds of artists can now see your exhibition request and apply to bring their art in your offices. </p>
           </div>
