fixed fontweight navbar

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -42,7 +42,7 @@
 .navbar-wagon-link {
   color: white;
   font-size: 14px;
-  font-weight: 700;
+  text-decoration:none;
 }
 .navbar-wagon-link:hover {
   color: white;
