last change on dashboard

--- a/app/assets/stylesheets/pages/_dashboard_company.scss
+++ b/app/assets/stylesheets/pages/_dashboard_company.scss
@@ -129,6 +129,10 @@ p.bid-status {
     color: $grey;
 }
 
+.bid-selected {
+    background: $brand-color !important;
+}
+
 p.user-desc {
     margin-top: -70px;
     font-size: .8em;
